# Maurice

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  pom.xml
.github/workflows/: cd.yml  rust-clippy.yml  rust.yml
benches/: bench.rs
docs/: index.html  maurice.js  maurice_bg.wasm
media/: AppIcon.icns
src/: Selector.form  Selector.java  args.rs  bios.rs  build.xml  data_input_stream.rs  dimension.rs  gui.rs  lib.rs  machine_snap_event.rs  main.rs  raw_image.rs  user_input.rs
src/gui/: Browser.java  Gui.java  about.rs  debug.rs  dialogs.rs  message.rs  mod.rs
src/hardware/: Keyboard.java  M6809.java  M6809.rs  Machine.java  Memory.java  Screen.java  Sound.java  k7.rs  machine.rs  memory.rs  mod.rs  screen.rs  sound.rs
src/hardware/keyboard/: mod.rs  modifiers.rs  scancodes.rs  vkey.rs
src/hardware/screen/: color.rs  mod.rs
src/hardware/sound/: mod.rs  pcm_source.rs
src/main/java/: Web.java  marcel.java
src/main/java/gui/: Browser.java  Gui.java
src/main/java/hardware/: Keyboard.java  M6809.java  Machine.java  Screen.java  Sound.java
src/main/java/marcel/: Selector.java  Web.java  marcel.java
src/main/java/marcel/gui/: Browser.java  Gui.java
src/main/java/marcel/hardware/: Keyboard.java  M6809.java  Machine.java  Memory.java  Screen.java  Sound.java
windows/: resources.rc
