[package]
name = "maurice"
version = "1.2.2"
edition = "2021"
authors = ["Matthieu Casanova"]
description = "Maurice, a Thomson MO5 emulator"
homepage = "https://github.com/kpouer/maurice"
repository = "https://github.com/kpouer/maurice"
license = "MIT"
readme = "README.md"
keywords = ["emulator", "emulation"]
categories = ["emulators"]

[[bin]]
name = "maurice"
path = "src/main.rs"

[lib]
name = "maurice_lib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
cpal = "0.15.3"
eframe = "0.30.0"
egui = "0.30.0"
egui-file-dialog = "0.8.0"
log = "0.4.25"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"
rust-embed = "8.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
rust-embed-for-web = "11.2.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Request", "RequestInit", "RequestMode", "Window", "Response"] }
js-sys = "0.3.77"

[dev-dependencies]
wasm-bindgen-test = "0.3"
#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#criterion = { version = "0.5.1", features = ["html_reports"] }
#
#[[bench]]
#name = "bench"
#harness = false

[profile.release]
codegen-units = 1
opt-level = 2
lto = true

[profile.dev.package."*"]
opt-level = 2
