[package]
name = "maurice"
version = "1.3.1"
edition = "2021"
authors = ["Matthieu Casanova"]
description = "Maurice, a Thomson MO5 emulator"
homepage = "https://github.com/kpouer/maurice"
repository = "https://github.com/kpouer/maurice"
license = "MIT"
readme = "README.md"
keywords = ["emulator", "emulation"]
categories = ["emulators"]

[[bin]]
name = "maurice"
path = "src/main.rs"

[lib]
name = "maurice_lib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
chrono = "0.4.40"
cpal = "0.15.3"
eframe = "0.31.0"
egui = "0.31.0"
log = "0.4.25"
web-time = "1.1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
egui-file-dialog = "0.9.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Request", "RequestInit", "RequestMode", "Window", "Response"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#criterion = { version = "0.5.1", features = ["html_reports"] }
#
#[[bench]]
#name = "bench"
#harness = false

[profile.release]
codegen-units = 1
opt-level = 2
lto = true

[profile.dev.package."*"]
opt-level = 2
