[package]
name = "maurice"
version = "1.3.1"
edition = "2024"
authors = ["Matthieu Casanova"]
description = "Maurice, a Thomson MO5 emulator"
homepage = "https://github.com/kpouer/maurice"
repository = "https://github.com/kpouer/maurice"
license = "MIT"
readme = "README.md"
keywords = ["emulator", "emulation"]
categories = ["emulators"]
build = "build.rs"

[[bin]]
name = "maurice"
path = "src/main.rs"

[lib]
name = "maurice_lib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata.bundle]
name = "Maurice"
identifier = "com.kpouer.maurice"
icon = ["media/icon.png", "media/AppIcon.icns"]

[dependencies]
chrono = "0.4"
cpal = "0.16.0"
eframe = "0.32"
egui = "0.32"
log = "0.4"
web-time = "1.1.0"
embed-resource = "3.0.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
egui-file-dialog = "0.11.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Request", "RequestInit", "RequestMode", "Window", "Response"] }

[dev-dependencies]
rstest = "0.26.1"
wasm-bindgen-test = "0.3"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[profile.release]
codegen-units = 1
opt-level = 2
lto = true

[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
embed-resource = "3.0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"
